# mcp-neo4j-vectordb

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  cursor_mcp_config_example.json  pyproject.toml
src/mcp_neo4j_vectordb/: __init__.py  server.py  utils.py
